--- a/templates/micro_post/index.html.twig
+++ b/templates/micro_post/index.html.twig
@@ -9,15 +9,24 @@
         </div>
     {% endfor %}
 
-    <h6 class="border-bottom border-gray pb-2 mb-0">Recent updates</h6>
+    {% if usersToFollow|length > 0 %}
+        <p>You currently don't follow anyone, you might find these users interesting: </p>
+        {% for userToFollow in usersToFollow %}
+            <a href="{{ path('following_follow', { 'id': userToFollow.id }) }}">@{{ userToFollow.username }}, </a>
+        {% endfor %}
+    {% else %}
+        <h6 class="border-bottom border-gray pb-2 mb-0">Recent updates</h6>
 
-    {% for post in posts %}
-        <a href="{{ path('micro_post_post', { 'id': post.id }) }}">
+        {% for post in posts %}
             {{ include('micro_post/raw-post.html.twig', { 'post': post }) }}
-        </a>
-        <small class="d-block text-right mt-3">
-            <a href="{{ path('micro_post_edit', { 'id': post.id }) }}">Edit</a>
-            <a href="{{ path('micro_post_delete', { 'id': post.id }) }}">Delete</a>
-        </small>
-    {% endfor %}
+            <small class="d-block text-right mt-3">
+                {% if is_granted('edit', post) %}
+                    <a href="{{ path('micro_post_edit', { 'id': post.id }) }}">Edit</a>
+                {% endif %}
+                {% if is_granted('delete', post) %}
+                    <a href="{{ path('micro_post_delete', { 'id': post.id }) }}">Delete</a>
+                {% endif %}
+            </small>
+        {% endfor %}
+    {% endif %}
 {% endblock %}
