--- a/templates/email/registration.html.twig
+++ b/templates/email/registration.html.twig
@@ -1,9 +1,5 @@
-<h3>Welcome to the app!</h3>
-
-Hello {{ user.fullname }}! You've registered into the app!<br/><br/>
-
-Please confirm account by clicking this <a href="{{ url('security_confirm', {'token': user.confirmatioToken})}}">link</a>
-
-To login, go to <a href="{{ url('security_login') }}">login page</a>,<br/><br/>
-
-Thanks!
+{{ 'email.registration'|trans({
+    '%name%': user.fullname,
+    '%confirm-link%': url('security_confirm', {'token': user.confirmatioToken}),
+    '%login-link%': url('security_login')
+})|raw }}
